Finished 1st article for deployment

--- a/anonymous functions.html
+++ b/anonymous functions.html
@@ -1,5 +1,5 @@
-<h2>Anonymous Functions in 3 Languages</h2>
-<h3>What are anonymous functions?</h3>
+<h1>Anonymous Functions in 3 Languages</h1>
+<h2>What are anonymous functions?</h2>
 <p>
     An anonymous function does not have a specific name that identifies it. 
     Rather, it is passed around a program as a piece of data to be called 
@@ -9,7 +9,7 @@
     instead of having to break up your code. They can also be used to briefly 
     create a new scope.
 </p>
-<h3>How to make an anonymous functions in JavaScript</h3>
+<h2>How to make an anonymous functions in JavaScript</h2>
 <p>
     JavaScript syntax offers two ways to create an anonymous function:
     <p>1: using the function keyword</p>
@@ -33,12 +33,12 @@
             )
     </code>
 </p>
-<h3>In C#</h3>
+<h2>In C#</h2>
 <p>
     C# also allows for two methods for generating anonymous functions:
     <p>1) using the delegate keyword</p>
     <code>
-        List&lt Item &gt desiredItems = list.Where( 
+        List&lt;Item&gt; desiredItems = list.Where( 
             delegate(Item item) { return item.Name.length > 0; }
             );
     </code>
@@ -49,7 +49,7 @@
             );
     </code>
     </p>
-<h3>In Python</h3>
+<h2>In Python</h2>
 <p>
     Python has its own version of lambda expressions:
     <code>
