Getting a second article ready for deployment

--- a/anonymous functions.html
+++ b/anonymous functions.html
@@ -62,7 +62,7 @@ three_arg_func = lambda a, b, c : a*b + c
 </code>
 </p>
 <p style="margin-top: 2rem; font-size: 1.0625rem;">
-    In summary, that's five ways across three programming 
+    In summary, these are five ways across three programming 
     languages to write anonymous functions. See if you can 
     use them to make your code a little more awesome!
 </p>
