More article work

--- a/Web APIs in C#.html
+++ b/Web APIs in C#.html
@@ -7,6 +7,7 @@
     is a program that allows two apps to share data over the internet. These apps 
     may be the front and back ends of a website, but can really run anywhere on the internet.
 </p>
+
 <h2>Why Use a Web API? Why Not MVC or Another Architecture?</h2>
 <p>
     There are many design patterns, each with their own pros and cons, but the 
@@ -20,12 +21,18 @@
     app (written perhaps in Swift or Kotlin), or by a desktop program (like a C# 
     WinForms app or a Flutter project), or by all of the above at once.
 </p>
+
 <h2>How to Program a Web API in C#</h2>
 <p>
     - Visual Studio template
     - Analyzing the template web API
     - Changing the template
 </p>
+<p>First, let's open Visual Studio (version 2017 or higher should be compatible).
+    Select Create a new Project and then find the ASP.NET Core Web API project template.</p>
+<img src="https://andrebacic.github.io/3Dportfolio/blogArticleImages/CreateNewWebAPI" alt="Selecting the C# Web API template">
+<p></p>
+
 <h2>How to Consume the C# Web API with JavaScript</h2>
 <p>
     - Creating a wwwroot folder
