--- a/Web APIs in C#.html
+++ b/Web APIs in C#.html
@@ -28,10 +28,31 @@
     - Analyzing the template web API
     - Changing the template
 </p>
-<p>First, let's open Visual Studio (version 2017 or higher should be compatible).
-    Select Create a new Project and then find the ASP.NET Core Web API project template.</p>
-<img src="https://andrebacic.github.io/3Dportfolio/blogArticleImages/CreateNewWebAPI" alt="Selecting the C# Web API template">
-<p></p>
+<p>
+    First, let's open Visual Studio (I'm using VS 2019 but the steps are very similar for other recent versions).
+    Select Create a new Project and then find the ASP.NET Core Web API project template.
+</p>
+<img src="https://andreblog.azurewebsites.net/images/CreateNewWebAPI" alt="Selecting the C# Web API template">
+<p>
+    Click 'Next' and give the new project a descriptive name (like FirstWebAPIProject) 
+    and choose the folder where you want it to be. Click 'Next' and observe that VS 
+    automatically selects the most recent version of .NET you have installed. Leave 
+    all of the default values for this example and click 'Create' to generate the new project.
+</p>
+<p>
+    Once the code generator has finished scaffolding out the new Web API project, observe 
+    in the Solution Explorer tab the codebase structure. Program.cs is just boilerplate code 
+    for starting and running all of the other code. Startup.cs contains the code for configuring
+    the API, and is where you would write code to define authentication and authorization 
+    policies or add different services to dependency injection. The appsettings.json file 
+    stores additional configuration data.
+</p>
+<p>
+    The more interesting code is in the WeatherForecast.cs and Controllers/WeatherForecastController.cs 
+    files. The WeatherForecast data model expectedly has a few properties for storing data about what 
+    the weather was at a specific time. In the WeatherForecastController we see a single RESTful API 
+    endpoint that returns a list of randomly filled out WeatherForecasts.
+</p>
 
 <h2>How to Consume the C# Web API with JavaScript</h2>
 <p>
