Wrote some of JSON article

--- a/anonymous functions.html
+++ b/anonymous functions.html
@@ -1,6 +1,6 @@
 <h1>Anonymous Functions in 3 Languages</h1>
 
-<h2>What are anonymous functions?</h2>
+<h2>What Are Anonymous Functions?</h2>
 <p>
     An anonymous function does not have a specific name that identifies it. 
     Rather, it is passed around a program as a piece of data to be called 
@@ -11,7 +11,7 @@
     create a new scope without having to put that code in a totally different 
     place in your codebase.
 </p>
-<h2>How to make an anonymous functions in JavaScript</h2>
+<h2>How to Make Anonymous Functions in JavaScript</h2>
 <p>
     JavaScript syntax offers two ways to create an anonymous function:
     <p>1: using the function keyword:</p>
