Started HTTP article

--- a/http verbs and REST.html
+++ b/http verbs and REST.html
@@ -1,3 +1,22 @@
 <!-- TODO -->
+<h1>Hypertext Transfer Protocol</h1>
 
-<!-- Tags: http -->
+<h2>What Is HTTP?</h2>
+<p>
+    HyperText Transfer Protocol (HTTP) is a set of rules for how web servers 
+    (like the ones Amazon and Google use to serve their websites) should respond 
+    to requests from web browsers (like you, with Chrome or Firefox or whatever 
+    browser you use). HTTP is the foundation for communication on the World Wide Web.
+</p>
+<h2>What Do HTTP Conversations Look Like?</h2>
+<p>
+    verb;headers;body
+</p>
+<h2></h2>
+<p></p>
+<h2></h2>
+<p></p>
+
+<!-- Don't forget a short summary -->
+
+<!-- Tags: HTTP -->
