More http article

--- a/http verbs and REST.html
+++ b/http verbs and REST.html
@@ -1,4 +1,3 @@
-<!-- TODO -->
 <h1>Hypertext Transfer Protocol</h1>
 
 <h2>What Is HTTP?</h2>
@@ -28,10 +27,24 @@
     is the information the client requested, often a web page.
 </p>
 <h2>HTTP Verbs and Status Codes</h2>
-<p></p>
+<p>
+    Get, Post, Put, Delete, and Head are the most common HTTP verbs.
+
+    1.x.x - Informational
+    2.x.x - Success (successful request and response)
+    3.x.x - Redirection
+    4.x.x - Client Error (bad request)
+    5.x.x - Server Error (good request, but the server could not fulfill it)
+
+</p>
 <h2>What Is REST?</h2>
 <p>Don't abuse HTTP verbs.</p>
 
-<!-- Don't forget a short summary -->
+<p style="margin-top: 2rem; font-size: 1.0625rem;">
+    In summary, you have learned what Hypertext Transfer Protocol (HTTP) is, how 
+    clients and web servers use it to communicate, and the importance of using REST. 
+    If you're developing web applications, see if you can use your new knowledge to 
+    make your part of the internet a better place!
+</p>
 
 <!-- Tags: HTTP -->
